--- a/HeadacheCDSSWeb/Content/indexstyle.css
+++ b/HeadacheCDSSWeb/Content/indexstyle.css
@@ -309,15 +309,16 @@ background-color: #9ECCE9;
      padding:100px 0 0 0;
      float:left;
 }
-#return
+#returnSearch
 {
   float:left;
-  margin: 10px 0 0 20px;  
+  margin: 10px 0 0 37px;  
   font-size: 20px;
   
 }
-#return a
+#returnSearch a
 {
+   font-size:20px;
    text-decoration:none;
    color: #000;  
 }
