--- a/HeadacheCDSSWeb/Content/patstyle.css
+++ b/HeadacheCDSSWeb/Content/patstyle.css
@@ -526,3 +526,10 @@ display: none;
 .querybtn{width:138px;} 
 
 p.unit{color:Red;}
+#content li span
+    
+#add
+{   
+    height:20px;
+     border:2px solid #98C2E2;
+    }
