--- a/HeadacheCDSSWeb/Views/EnterPatInfor/Index.cshtml
+++ b/HeadacheCDSSWeb/Views/EnterPatInfor/Index.cshtml
@@ -16,27 +16,30 @@
 @{
     var diagnosis = new SelectList(new[]
         {  new SelectListItem {Text = "", Value = ""},
-            new SelectListItem {Text = "很可能的偏头痛", Value = "很可能的偏头痛"},
-            new SelectListItem {Text = "无先兆性偏头痛", Value = "无先兆性偏头痛"},
-             new SelectListItem {Text = "先兆性偏头痛", Value = "先兆性偏头痛"},
-             new SelectListItem {Text = "慢性偏头痛", Value = "慢性偏头痛"},
-             
-               new SelectListItem {Text = "很可能的紧张型头痛", Value = "很可能的紧张型头痛"},
-               new SelectListItem {Text = "慢性紧张型头痛", Value = "慢性紧张型头痛"},
-             new SelectListItem {Text = "偶尔发作性紧张型头痛", Value = "偶尔发作性紧张型头痛"},
-            new SelectListItem {Text = "频繁阵发性紧张型头痛", Value = "频繁阵发性紧张型头痛"},
-            
-             new SelectListItem {Text = "丛集性头痛", Value = "丛集性头痛"},
-             new SelectListItem {Text = "很可能的丛集性头痛", Value = "很可能的丛集性头痛"},
-              new SelectListItem {Text = "阵发性偏侧头痛", Value = "阵发性偏侧头痛"},
-               new SelectListItem {Text = "很可能的阵发性偏侧头痛", Value = "很可能的阵发性偏侧头痛"},
-                 new SelectListItem {Text = "SUNCT", Value = "SUNCT"},
-                 new SelectListItem {Text = "很可能的SUNCT", Value = "很可能的SUNCT"},
-                 
-             new SelectListItem {Text = "药物滥用引起的头痛", Value = "药物滥用引起的头痛"},          
-            new SelectListItem {Text = "新发每日持续性头痛", Value = "新发每日持续性头痛"},
-             new SelectListItem {Text = "其他慢性每日头痛", Value = "其他慢性每日头痛"},
-              new SelectListItem {Text = "其他原发性头痛", Value = "其他原发性头痛"},
+           new SelectListItem {Text = "偏头痛", Value = "偏头痛"},
+           new SelectListItem {Text = "偏头痛:很可能的偏头痛", Value = "很可能的偏头痛"},
+           new SelectListItem {Text = "偏头痛:无先兆性偏头痛", Value = "无先兆偏头痛"},
+           new SelectListItem {Text = "偏头痛:先兆性偏头痛", Value = "先兆性偏头痛"},
+           new SelectListItem {Text = "偏头痛:偏头痛持续状态", Value = "偏头痛持续状态"},
+         
+           new SelectListItem {Text = "紧张型头痛", Value = "紧张型头痛"},
+           new SelectListItem {Text = "紧张型头痛:很可能的紧张型头痛", Value = "很可能的紧张型头痛"}, 
+           new SelectListItem {Text = "紧张型头痛:偶尔发作性紧张型头痛", Value = "偶尔发作性紧张型头痛"},
+           new SelectListItem {Text = "紧张型头痛:频繁阵发性紧张型头痛", Value = "频繁阵发性紧张型头痛"},
+           
+           new SelectListItem {Text = "丛集性头痛和其他原发性三叉神经痛", Value = "丛集性头痛和其他原发性三叉神经痛"}, 
+           new SelectListItem {Text = "丛集性头痛和其他原发性三叉神经痛:丛集性头痛", Value = "丛集性头痛"},
+           new SelectListItem {Text = "丛集性头痛和其他原发性三叉神经痛:很可能的丛集性头痛", Value = "很可能的丛集性头痛"},
+           new SelectListItem {Text = "丛集性头痛和其他原发性三叉神经痛:很可能的阵发性偏侧头痛", Value = "很可能的阵发性偏侧头痛"},
+           new SelectListItem {Text = "丛集性头痛和其他原发性三叉神经痛:SUNCT", Value = "SUNCT"},
+           new SelectListItem {Text = "丛集性头痛和其他原发性三叉神经痛:很可能的SUNCT", Value = "很可能的SUNCT"},          
+                   
+           new SelectListItem {Text = "慢性每日头痛:慢性偏头痛", Value = "慢性偏头痛"},
+           new SelectListItem {Text = "慢性每日头痛:药物滥用引起的头痛", Value = "药物滥用引起的头痛"},
+           new SelectListItem {Text = "慢性每日头痛:慢性紧张型头痛", Value = "慢性紧张型头痛"},   
+           new SelectListItem {Text = "慢性每日头痛:新发每日持续性头痛", Value = "新发每日持续性头痛"},
+           
+            new SelectListItem {Text = "颅神经痛和中枢源性面痛", Value = "颅神经痛和中枢源性面痛"},
         }, "Text", "Value");
 }
 @{
@@ -69,8 +72,7 @@
                       <i data-time-icon="icon-time" data-date-icon="icon-calendar">
                       </i>
                     </span>
-                  </div>
-            
+                  </div>            
                 </li>
                 <li><span class="itemname">诊断结论</span> @Html.DropDownList("diagnosis", @diagnosis)
                 </li>
