--- a/HeadacheCDSSWeb/Views/Shared/Regionview.cshtml
+++ b/HeadacheCDSSWeb/Views/Shared/Regionview.cshtml
@@ -14,9 +14,16 @@
     <script src="@Url.Content("~/Scripts/jquery.dataTables.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/plugins/bootstrap-datetimepicker.min.js")"type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/plugins/bootstrap-datetimepicker.js")"type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/plugins/bootstrap.min.js")"type="text/javascript"></script>     
+ <!--     <script src="@Url.Content("~/Scripts/plugins/bootstrap.min.js")"type="text/javascript"></script>   -->  
     <link href="@Url.Content("~/Content/bootstrap-datetimepicker.min.css")" rel="stylesheet" type="text/css"/>
     <link href="@Url.Content("~/Content/bootstrap-combined.min.css")" rel="stylesheet" type="text/css"/>
+ <!--    <script src="@Url.Content("~/Scripts/bootstrap.js")" type="text/javascript"></script>-->
+   <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
+     <link href="@Url.Content("~/Content/bootstrap/bootstrap-theme.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/bootstrap/bootstrap.css")" rel="stylesheet" type="text/css" />
+    <script src="@Url.Content("~/Scripts/jquery.json-2.4.min.js")" type="text/javascript"></script>
+<!--    <script src="@Url.Content("~/Scripts/plugins/modal.js")"type="text/javascript"></script> -->
+    
    
 </head>
 <body>
