--- a/HeadacheCDSSWeb/Views/ViewPatRecord/Index.cshtml
+++ b/HeadacheCDSSWeb/Views/ViewPatRecord/Index.cshtml
@@ -230,6 +230,17 @@
 
 <script type="text/javascript">
     $(function () {
+        //用户角色判断；
+        var userType='@ViewBag.userType';
+        if(userType=="doctor"){
+            $("#diagnosis").show();
+            $("#continue").show()
+            $("#delete").show()
+        }else{
+            $("#diagnosis").hide();
+            $("#continue").hide();
+            $("#delete").hide();
+        }
         var OCX = document.getElementById('Reporter2');
         try {
             OCX.OpenReport("D:\\CDSSOCX");
